--- a/client/src/components/modal/modal.css
+++ b/client/src/components/modal/modal.css
@@ -6,7 +6,7 @@
     top: 0;
     left: 0;
     display: flex;
-    align-self: center;
+    align-items: center;
     justify-content: center;
     transform: scale(0);
 }
@@ -16,6 +16,14 @@
 }
 
 .modal__content {
+    width: 400px;
+    height: 400px;
+    top: 50%;
+    left: 50%;
+    background-color: rgb(25, 101, 136);
+    /* display: flex;
+    align-items: center;
+    justify-content: center; */
     padding: 20px;
     border-radius: 12px;
 
