--- a/client/src/components/modal/modal.css
+++ b/client/src/components/modal/modal.css
@@ -1,7 +1,7 @@
 .modal {
     height: 100vh;
     width: 100vw;
-    background-color: rgba(0, 0, 0, 0.4);
+    background-color: rgba(0, 0, 0, 0.8);
     position: fixed;
     top: 0;
     left: 0;
@@ -16,15 +16,41 @@
 }
 
 .modal__content {
-    width: 400px;
-    height: 400px;
+    width: 600px;
+    height: 600px;
     top: 50%;
     left: 50%;
-    background-color: rgb(25, 101, 136);
-    /* display: flex;
-    align-items: center;
-    justify-content: center; */
+    color: var(--text-color);
+    background-color: var(--background-color);
     padding: 20px;
     border-radius: 12px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+}
+.btnForAnswer{
+    background-color: var(--main-bg-color);
+    color: var(--text-color);
+    border-radius: 5px;
+}
 
+.inputForAnswer{
+    border-radius: 5px;
+}
+
+.btnForAnswer:hover, .inputForAnswer:hover{
+    box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.5);
+}
+
+.inputsForAnswer{
+    display: flex;
+    gap: 10px;
+}
+.question{
+    text-align: center;
+}
+.timer{
+    display: flex;
+    justify-content: center;
 }
