--- a/client/src/index.css
+++ b/client/src/index.css
@@ -236,11 +236,9 @@ td>button {
   transition: background-color 300ms linear
 }
 
-.open-modal:hover, .endOfTheGame:hover{
-  background-color: var(--table-hover-color);
-  scale: 1.1;
-  transition: scale 100ms linear;
-  transition: background-color 300ms linear
+.points:hover:hover{
+  scale: 1.3;
+  transition: scale 200ms linear;
 }
 
 .endOfTheGame{
@@ -248,6 +246,14 @@ td>button {
   background-color: var(--background-color);
   transition: background-color 300ms linear
 }
+
+.endOfTheGame:hover{
+  background-color: var(--table-hover-color);
+  scale: 1.1;
+  transition: scale 100ms linear;
+  transition: background-color 300ms linear
+}
+
 
 .rate{
   display: flex;
@@ -258,4 +264,36 @@ td>button {
 li{
   color: var(--text-color);
   transition: color 300ms linear
+}
+
+.authForm{
+  border: 2px solid var(--text-color);
+  border-radius: 20px;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 500px;
+  height: 400px;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  margin-right: -50%;
+  transform: translate(-50%, -50%);
+  gap: 20px
+}
+
+.divForLogin, .divForPassword{
+  margin: 0px 5px;
+  display: flex;
+  flex-direction: column;
+}
+
+.btnForAuth{
+  max-width: 350px;
+  color: var(--text-color);
+  background-color: var(--background-color);
+  transition: background-color 300ms linear;
+  border-color: var(--border-color);
+  border-radius: 20px;
 }
